Mockito Only Test